--- a/src/public/index.html
+++ b/src/public/index.html
@@ -2,10 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>JWT Project</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Welcome | JWT Project</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <h1>Welcome to JWT Project</h1>
-  <p>Use Postman or React frontend to test API</p>
+  <div class="home-container">
+    <h1 class="title">Welcome to JWT Project</h1>
+    <p class="subtitle">Login or Register to continue</p>
+    <div class="home-buttons">
+      <a href="login.html" class="btn slide-in-left">Login</a>
+      <a href="register.html" class="btn slide-in-right">Register</a>
+    </div>
+  </div>
 </body>
 </html>
