--- a/src/public/login.html
+++ b/src/public/login.html
@@ -4,26 +4,32 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <h2>User Login</h2>
-  <form id="loginForm">
-    <label for="email">Email:</label>
-    <input type="email" id="email" name="email" required><br><br>
-
-    <label for="password">Password:</label>
-    <input type="password" id="password" name="password" required><br><br>
-
-    <button type="submit">Login</button>
-  </form>
-
-  <p id="msg"></p>
+  <div class="form-container">
+    <div class="form-box login-box">
+      <h2>Login</h2>
+      <form id="loginForm">
+        <div class="input-group">
+          <input type="email" id="email" required>
+          <label>Email</label>
+        </div>
+        <div class="input-group">
+          <input type="password" id="password" required>
+          <label>Password</label>
+        </div>
+        <button type="submit">Login</button>
+      </form>
+      <p class="switch">Don't have an account? <a href="register.html">Register</a></p>
+      <p id="msg"></p>
+    </div>
+  </div>
 
   <script>
     const form = document.getElementById('loginForm');
     form.addEventListener('submit', async (e) => {
       e.preventDefault();
-
       const email = document.getElementById('email').value;
       const password = document.getElementById('password').value;
 
