--- a/src/public/register.html
+++ b/src/public/register.html
@@ -4,29 +4,36 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Register</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <h2>User Registration</h2>
-  <form id="registerForm">
-    <label for="username">Username:</label>
-    <input type="text" id="username" name="username" required><br><br>
-
-    <label for="email">Email:</label>
-    <input type="email" id="email" name="email" required><br><br>
-
-    <label for="password">Password:</label>
-    <input type="password" id="password" name="password" required><br><br>
-
-    <button type="submit">Register</button>
-  </form>
-
-  <p id="msg"></p>
+  <div class="form-container">
+    <div class="form-box register-box">
+      <h2>Register</h2>
+      <form id="registerForm">
+        <div class="input-group">
+          <input type="text" id="username" required>
+          <label>Username</label>
+        </div>
+        <div class="input-group">
+          <input type="email" id="email" required>
+          <label>Email</label>
+        </div>
+        <div class="input-group">
+          <input type="password" id="password" required>
+          <label>Password</label>
+        </div>
+        <button type="submit">Register</button>
+      </form>
+      <p class="switch">Already have an account? <a href="login.html">Login</a></p>
+      <p id="msg"></p>
+    </div>
+  </div>
 
   <script>
     const form = document.getElementById('registerForm');
     form.addEventListener('submit', async (e) => {
       e.preventDefault();
-
       const username = document.getElementById('username').value;
       const email = document.getElementById('email').value;
       const password = document.getElementById('password').value;
